department, employee, and role section version 1

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <app-header></app-header>
 <app-project-list></app-project-list>
+
+<app-employee-section></app-employee-section>
+<app-department-section></app-department-section>
+<app-role-section></app-role-section>
+
 <app-footer></app-footer>
