--- a/src/app/components/department-section/department-create/department-create.component.html
+++ b/src/app/components/department-section/department-create/department-create.component.html
@@ -16,6 +16,6 @@
       </div>
     </div>
 
-    <button type="submit" class="btn btn-primary w-100 mt-3" [disabled]="departmentForm.invalid">Add Department</button>
+    <button type="submit" class="btn btn-primary w-100 mt-3 border-0" [disabled]="departmentForm.invalid">Add Department</button>
   </form>
 </div>
