--- a/src/app/components/department-section/department-list/department-list.component.html
+++ b/src/app/components/department-section/department-list/department-list.component.html
@@ -1,5 +1,5 @@
 <div class="department-container text-center">
-  <h1 class="display-4 mb-4">Department List</h1>
+  <h1 class="text-center mb-4">Department List</h1>
 
   <div class="table-responsive">
     <table class="table table-hover table-striped">
@@ -26,16 +26,16 @@
               <button *ngIf="editModeDepartmentId !== department.departmentID"
                       class="action-button action-button-edit"
                       (click)="enterEditMode(department.departmentID)">
-                Edit
+                <i class="bi bi-pencil-square"></i>
               </button>
               <button *ngIf="editModeDepartmentId === department.departmentID"
                       class="action-button action-button-submit"
                       (click)="saveChanges(department)">
-                Submit
+                <i class="bi bi-save"></i>
               </button>
               <button class="action-button action-button-delete"
                       (click)="onDelete(department.departmentID)">
-                Delete
+                <i class="bi bi-trash"></i>
               </button>
             </div>
           </td>
