--- a/src/app/components/employee-section/employee-create/employee-create.component.css
+++ b/src/app/components/employee-section/employee-create/employee-create.component.css
@@ -1,12 +1,13 @@
 .form-container {
-  background: rgba(255, 255, 255, 0.1);
-  padding: 2rem;
+  background-color: var(--card-background-color);
+  border: 1px solid var(--card-border-color);
   border-radius: 12px;
-  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+  padding: 16px;
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
 
 .form-label {
-  color: #f0f0f0;
+  color: black;
 }
 
 .form-control {
@@ -16,11 +17,10 @@
 }
 
 .btn-primary {
-  background-color: #4e54c8;
-  border: none;
+  background-color: var(--primary-color);
 }
 
 .btn-primary:disabled {
-  background-color: #6f72c9;
+  background-color: var(--primary-color-disabled);
   opacity: 0.7;
 }
