--- a/src/app/components/employee-section/employee-create/employee-create.component.html
+++ b/src/app/components/employee-section/employee-create/employee-create.component.html
@@ -52,6 +52,6 @@
       </div>
     </div>
 
-    <button type="submit" class="btn btn-primary w-100 mt-3" [disabled]="employeeForm.invalid">Add Employee</button>
+    <button type="submit" class="btn btn-primary w-100 mt-3 border-0" [disabled]="employeeForm.invalid">Add Employee</button>
   </form>
 </div>
