--- a/src/app/components/employee-section/employee-list/employee-list.component.html
+++ b/src/app/components/employee-section/employee-list/employee-list.component.html
@@ -1,5 +1,5 @@
 <div class="employee-container text-center">
-  <h1 class="display-4 mb-4">Employee List</h1>
+  <h1 class="text-center mb-4">Employee List</h1>
 
   <div class="table-responsive">
     <table class="table table-hover table-striped">
@@ -65,16 +65,16 @@
               <button *ngIf="editModeEmployeeId !== employee.employeeID"
                       class="action-button action-button-edit"
                       (click)="enterEditMode(employee.employeeID)">
-                Edit
+                <i class="bi bi-pencil-square"></i>
               </button>
               <button *ngIf="editModeEmployeeId === employee.employeeID"
                       class="action-button action-button-submit"
                       (click)="saveChanges(employee)">
-                Submit
+                <i class="bi bi-save"></i>
               </button>
               <button class="action-button action-button-delete"
                       (click)="onDelete(employee.employeeID)">
-                Delete
+                <i class="bi bi-trash"></i>
               </button>
             </div>
           </td>
