--- a/src/app/components/role-section/role-create/role-create.component.html
+++ b/src/app/components/role-section/role-create/role-create.component.html
@@ -28,6 +28,6 @@
       </div>
     </div>
 
-    <button type="submit" class="btn btn-primary w-100 mt-3" [disabled]="roleForm.invalid">Add Role</button>
+    <button type="submit" class="btn btn-primary w-100 mt-3 border-0" [disabled]="roleForm.invalid">Add Role</button>
   </form>
 </div>
