--- a/src/app/components/role-section/role-list/role-list.component.html
+++ b/src/app/components/role-section/role-list/role-list.component.html
@@ -1,5 +1,5 @@
 <div class="role-container text-center">
-  <h1 class="display-4 mb-4">Role List</h1>
+  <h1 class="text-center mb-4">Role List</h1>
 
   <div class="table-responsive">
     <table class="table table-hover table-striped">
@@ -38,16 +38,16 @@
               <button *ngIf="editModeRoleId !== role.roleID"
                       class="action-button action-button-edit"
                       (click)="enterEditMode(role.roleID)">
-                Edit
+                <i class="bi bi-pencil-square"></i>
               </button>
               <button *ngIf="editModeRoleId === role.roleID"
                       class="action-button action-button-submit"
                       (click)="saveChanges(role)">
-                Submit
+                <i class="bi bi-save"></i>
               </button>
               <button class="action-button action-button-delete"
                       (click)="onDelete(role.roleID)">
-                Delete
+                <i class="bi bi-trash"></i>
               </button>
             </div>
           </td>
