--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,6 +5,6 @@
       <i class="fab fa-github"></i>
     </a>
   <br>
-    &copy; <span id="current-year">{{ currentYear }}</span> TaskTrackr All rights reserved
+    &copy; <span id="current-year">{{ currentYear }}</span> JanTaskTracker All rights reserved
   </p>
 </footer>
